Removed some explanations and fixed wrapping

--- a/CSP/wwwroot/css/site.css
+++ b/CSP/wwwroot/css/site.css
@@ -45,3 +45,7 @@ body {
     flex-direction: column;
     list-style: none;
 }
+
+.list-group-item {
+    word-break: break-word;
+}
